# plinycompute

./: CMakeLists.txt
applications/: Applications.cmake
applications/TestMatrixMultiply/: TestMatrixMultiply.cc
applications/TestTaco/: CMakeLists.txt  TestExp.cc  TestHs.cc  TestTaco.cc  TestTaco01  TestTaco02  TestTaco03  TestTacoReadMTX.cc  TestTacoTest.cc
applications/TestTaco/sharedLibraries/headers/: Arr.h  BlockOffsetter.h  Decode.h  DecodeTra.h  Exp.h  ExpJoin.h  ExpScanner.h  ExpWriter.h  Module.h  TAbsOp.h  TAssignment.h  TBinOp.h  TExpr.h  TMaxOp.h  TMinOp.h  TMultOp.h  TNode  TParserTypes.h  TPlusOp.h  TReluOp.h  TSigmoidOp.h  TSubtractOp.h  TTensor.h  TUnOp.h  TacoAggregation.h  TacoCompute.h  TacoJoin.h  TacoJoinAux.h  TacoMatMulAggregation.h  TacoMatMulJoin.h  TacoMemory.h  TacoMod.h  TacoProjection.h  TacoReadMTX.h  TacoScanner.h  TacoTensor.h  TacoTensorBlock.h  TacoTensorBlockMeta.h  TacoWriter.h  Tra.h  (+9 more)
applications/TestTaco/sharedLibraries/source/: Arr.cc  Exp.cc  ExpJoin.cc  ExpScanner.cc  ExpWriter.cc  TAbsOp.cc  TAssignment.cc  TBinOp.h  TExpr.cc  TMaxOp.cc  TMinOp.cc  TMultOp.cc  TNode.cc  TPlusOp.cc  TReluOp.cc  TSigmoidOp.cc  TSubtractOp.cc  TTensor.cc  TUnOp.cc  TacoAggregation.cc  TacoJoin.cc  TacoJoin2.cc  TacoJoin3.cc  TacoJoinAux.cc  TacoMatMulAggregation.cc  TacoMatMulJoin.cc  TacoMemory.cc  TacoProjection.cc  TacoReadMTX.cc  TacoScanner.cc  TacoTensor.cc  TacoTensorBlock.cc  TacoTensorBlockMeta.cc  TacoWriter.cc  TraAgg.cc  TraFilter.cc  TraJoin.cc  TraMeta.cc  TraRekey.cc  TraScanner.cc  (+3 more)
applications/TestTaco/tensorAlgebraDSL/headers/: NLexer.h  NParser.h  NParserTypes.h  TParser.h  TParserTypes.h
applications/TestTaco/tensorAlgebraDSL/source/: NLexer.l  NParser.y  TLexer.l  TParser.y
onnx_examples/: create_onnx_model.py  run_simple_relu.py
onnx_pliny/: __init__.py  backend.py  backend_rep.py  onnx_pliny.cc
pdb/src/builtInPDBObjects/headers/: Array.cc
pdb/src/client/source/: PDBClient.cc
pdb/src/computations/headers/: AggregationTests.h
pdb/src/lambdas/headers/: LambdaCreationFunctions.h
pdb/src/objectModel/headers/: GetVTable.h  GlobalVariables.cc
pdb/src/objectModel/source/: VTableMapCatalogLookup.cc  VTableMapConstructor.cc
pdb/src/onnx/headers/: PDBOnnx.h
pdb/src/onnx/source/: PDBOnnx.cc
pdb/src/pipeline/headers/: JoinTests.h
pdb/src/pipeline/headers/sinks/: AggregationCombinerSink.h
pdb/src/sharedLibraries/headers/: ReadStringStringPair.h  SillyCartasianJoinStringString.h  SillyWriteStringString.h  StringStringPair.h
pdb/src/sharedLibraries/source/: ReadStringStringPair.cc  SillyCartasianJoinStringString.cc  SillyWriteStringString.cc  StringStringPair.cc
pdb/src/taco/headers/: TacoMod.h  TacoModuleMap.h
tests/integration/TestCartasianJoinWithKey/: CMakeLists.txt  TestCartasianJoinWithKey.cc
